--- a/Client_side_app/web/web_app_new.html
+++ b/Client_side_app/web/web_app_new.html
@@ -7,7 +7,7 @@
 		<option value="1.00">have sound airways.</option>
 		<option>have sick airways.</option>
 		</select>
-	That feedback is optional. You receive the probability of healthy airways right after the 16-second breath test.<br><br>Train, 'start test', and breath forcedly through your mouth.</p>
+	That feedback is optional. You receive the probability of healthy airways right after the 16-second breath test.<br><br>Train, 'start test', and breath deeply through your mouth.</p>
 	<button id="one1" onclick="startB();"><div id="one2"></div></button>
 	<table cellpadding="5">
 	<caption>Table 1: Improve the auscultation</caption><tbody>
